--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.16
   camera: ^0.11.0+2
   path_provider: ^2.1.5
+  torch_light: ^1.1.0
 
 dev_dependencies:
   flutter_test:
