--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   camera: ^0.11.0+2
   path_provider: ^2.1.5
   torch_light: ^1.1.0
+  audioplayers: ^6.1.0
+  volume_controller: ^2.0.8
 
 dev_dependencies:
   flutter_test:
