--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   torch_light: ^1.1.0
   audioplayers: ^6.1.0
   volume_controller: ^2.0.8
+  flutter_sound: ^9.17.8
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
