--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_sound: ^9.17.8
   permission_handler: ^11.3.1
   vibration: ^2.0.1
+  connectivity_plus: ^6.1.1
 
 dev_dependencies:
   flutter_test:
