--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   permission_handler: ^11.3.1
   vibration: ^2.0.1
   connectivity_plus: ^6.1.1
+  device_info_plus: ^11.2.0
+  disk_space_2: ^1.0.8
 
 dev_dependencies:
   flutter_test:
